<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/device_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    android:orientation="vertical"
    tools:context="com.example.juha.peoplecounterapp.DeviceDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_device_detail_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_device_name"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_margin"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_date_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <TextClock
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:id="@+id/textClock_time_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_margin_x2"
                />

        </LinearLayout>

        <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView_visitor_numbers_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device_detail_number_of_visitors"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView_last_visitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_detail_last_visitor" />

                <TextView
                    android:id="@+id/textView_last_visitor_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/device_detail_no_visitors" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_today"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:text="@string/today" />

                <TextView
                    android:id="@+id/textView_today_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_0" />

            </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView_last_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_hour" />

                        <TextView
                            android:id="@+id/textView_last_hour_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_0" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView_yesterday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yesterday" />

                        <TextView
                            android:id="@+id/textView_yesterday_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_0" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView_last_7_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_7_days" />

                        <TextView
                            android:id="@+id/textview_last_7_days_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_0" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView_last_30_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_30_days" />

                        <TextView
                            android:id="@+id/textview_last_30_days_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_0" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView_all_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_time" />

                        <TextView
                            android:id="@+id/textView_all_time_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_0" />

                    </TableRow>
                </TableLayout>

    </LinearLayout>

</LinearLayout>
